# schnetpack

./: )  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  before  builder.docx  datamodule.py  pyproject.toml  readthedocs.yaml  requirements.txt  sandbox.ipynb  setup.py  test.ipynb  tox.ini
.github/workflows/: black.yml  main.yaml  main.yml  python-package.yml  python-publish.yml
data_tutorial/: ethanol_sampledata.xyz  pretrained_painn_ethanol.model
docs/: Makefile  conf.py  getstarted.rst  howtos  index.rst  sacred.md  sacred_scripts.md  sphinx-requirements.txt  tutorials
docs/api/: atomistic.rst  data.rst  datasets.rst  md.rst  model.rst  nn.rst  representation.rst  schnetpack.rst  task.rst  train.rst  transform.rst
docs/getstarted/: benchmarks.rst  configs.rst  firststeps.rst  getstarted.rst  train_cli.rst
docs/guide/: basics.rst  getstarted.rst  index.rst  md.rst  training.rst  trainmodel.rst
docs/modules/: atomistic.rst  base.rst  data.rst  datasets.rst  environment.rst  index.rst  md.rst  metrics.rst  nn.rst  output_modules.rst  representation.rst  simulate.rst  train.rst  utils.rst
docs/sacredscripts/: md.rst
docs/tutorials/: asemodel.rst  evaluate.rst  index.rst  preparedata.ipynb  preparedata.rst  qm9.ipynb  runmd.rst  split.npz  trainmodel.html  trainmodel.rst  tutorial_01_preparing_data.ipynb  tutorial_02_qm9.ipynb  tutorial_03_force_models.ipynb  tutorial_04_molecular_dynamics.ipynb  tutorial_05_batchwise_relaxations.ipynb  tutorial_ethanol.rst  tutorial_qm9.rst
docs/userguide/: configs.rst  md.rst  overview.rst
examples/: README.md
examples/howtos/: 01_howto_ensemble_calculations.ipynb  02_howto_batchwise_relaxations.ipynb  ensemble_calculations.ipynb  howto_batchwise_ensemble_sequential_comparison.ipynb  howto_batchwise_relaxations.ipynb  howto_batchwise_relaxations_old.ipynb  howto_ensemble_calculation.ipynb  lammps.rst
examples/tutorials/: si16.db  split.npz  tutorial_01_preparing_data.ipynb  tutorial_02_qm9.ipynb  tutorial_03_force_models.ipynb  tutorial_04_molecular_dynamics.ipynb  tutorial_05_materials.ipynb
examples/wannier/: .train_wannier.py.swp  orig_submit_jobs.py  submit_jobs_sabine.py  train_wannier.py  utils.py  wannier_centers_generator.py
interfaces/lammps/: pair_schnetpack.cpp  pair_schnetpack.h  patch_lammps
src/: physnet_converter.py  physnet_converter_2.py
src/examples/: ase_interface.py  demo_notebook.ipynb  ethanol_example.py  ethanol_script.py  preparedata_code.py  qm9_base.py  qm9_example.py  qm9_physnet.py  qm9_schnet.py  qm9_script.py  qm9_tutorial.py  qm9_wACSF.py
src/schnetpack/: md.py  (+24 more)
testenv/: pyvenv.cfg
tests/: README.md  __init__.py  assertions.py  base_test.py  conftest.py  test_activation.py  test_cutoff.py  test_data.py  test_environment.py  test_example_scripts.py  test_gdml.py  test_hdnn.py  test_hyperparams.py  test_layers.py  test_md.py  test_md_utils.py  test_metrics.py  test_nn_activations.py  test_nn_base.py  test_nn_blocks.py  test_nn_initializers.py  test_nn_radial.py  test_orca_parser.py  test_property_model.py  test_sacred.py  test_schnet.py  test_scripts.py  test_scripts_utils.py  test_smear.py  test_trainer.py
(+545 files in other folders)
