[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schnetpack"
# Declaring that the version will be read dynamically.
# This helps us not having to specify the version twice.
# We have to specify the version only in schnetpack.__version__
# see [tool.setuptools.dynamic] below
dynamic = ["version"]
authors = [
    { name = "Kristof T. Schuett" },
    { name = "Michael Gastegger" },
    { name = "Stefaan Hessmann" },
    { name = "Niklas Gebauer" },
    { name = "Jonas Lederer" }
]
description = "SchNetPack - Deep Neural Networks for Atomistic Systems"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.4",
    "sympy",
    "ase>=3.21",
    "h5py",
    "pyyaml",
    "hydra-core>=1.1.0",
    "torch>=1.9",
    "pytorch_lightning>=2.0.0",
    "torchmetrics",
    "hydra-colorlog>=1.1.0",
    "rich",
    "fasteners",
    "dirsync",
    "torch-ema",
    "matscipy",
    "tensorboard",
    "tensorboardX",
    "tqdm",
    "pre-commit",
    "black",
    "protobuf"
]

[project.optional-dependencies]
test = ["pytest", "pytest-datadir", "pytest-benchmark"]

[tool.setuptools]
package-dir = { "" = "src" }
script-files = [
    "src/scripts/spkconvert",
    "src/scripts/spktrain",
    "src/scripts/spkpredict",
    "src/scripts/spkmd",
    "src/scripts/spkdeploy",
]

[tool.setuptools.dynamic]
version = {attr = "schnetpack.__version__"}
